# met-tour-project

./: .env.example  .gitignore  README.md  dataset_eda.ipynb  embed.ipynb  fetch_met_descriptions.py  met_tour_routing.py  query_cluster.py  requirements.txt
algo-implement/: gmm_handwritten_testingarea.ipynb  gmm_notebook.ipynb
app/: met_search.py
app/backend/: encoder.py  index.py  main.py  models.py  pyproject.toml
app/frontend/: next.config.mjs  package-lock.json  package.json  tsconfig.json
backend/: .env.example  config.py  encoder.py  index.py  main.py  models.py  pyproject.toml  routing.py  test_routing_dummy.py  viz.py
data/processed/: met_1k_api_test.csv  met_object_id_groups_summary.json  met_on_view.csv
embeddings/metart/: gmm_joint_320_100.npz  gmm_joint_320_100_indices.json  gmm_joint_48_100.npz  gmm_joint_48_100_indices.json  gmm_joint_indices.json  gmm_manifest.json
frontend/: README.md  package-lock.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
frontend/components/: ClusterViz.tsx  HeroSection.tsx  LoadingState.tsx  SearchForm.tsx  TourMapInner.tsx  TourMapOverlay.tsx  TourPanel.tsx
gmm_artifacts_temp/: cluster_assignments.npy  gmm_covariances.npy  gmm_means.npy  gmm_means_l2.npy  gmm_weights.npy  pca_components.npy  pca_explained_variance_ratio.npy  pca_mean.npy  responsibilities.npy
notebooks/: gmm_handwritten.ipynb
src/: __init__.py  cluster_gmm.py  cosine_retrieval.py  embed_pipeline.py  embed_prep.py  fetch_met_collection.py  fetch_met_on_view.py  filled_embeddings_eda.ipynb  split_met_object_ids.py
(+47 files in other folders)
